...
                          )
                        : Text(
                            isLast
                                ? 'Terminer'
                                : (_currentStep == 0
                                    ? 'Commencer'
                                    : 'Continuer'),
                            style: const TextStyle(
                                fontSize: 16, fontWeight: FontWeight.w700),
                          ),
                  ),
                ),
              )
...
